==> Flight98030/XIAOClock/src/PCF8563/PCF8563.cpp <==
#include "PCF8563/PCF8563.h"

void RTC_PCF8563::initClock()
{
	uint8_t buf[16] = {0};
	buf[0]  = 0x00;	    //寄存器地址
	buf[1]  = 0x00;	    //REG1
	buf[2]  = 0x00;	    //REG2
    /*时间*/
	buf[3]  = 0x01;     //设置秒
  	buf[4]  = 0x01;     //设置分
  	buf[5]  = 0x01;     //设置时
    /*日期*/
  	buf[6]  = 0x01;     //设置日
  	buf[7]  = 0x01;     //设置星期
  	buf[8]  = 0x01;     //设置月，世纪
  	buf[9] 	= 0x01;     //设置年
    /*闹钟*/
  	buf[10] = 0x80;     //设置分钟为 00
  	buf[11] = 0x80;     //设置小时为 00
  	buf[12] = 0x80;     //设置 日 为 00
  	buf[13] = 0x80;     //设置星期为 00
    
  	buf[14] = 0x00;     //clockout设置为0
  	buf[15] = 0x00;     //定时器REG设置为0
	
	esp_err_t ret = i2c_master_WriteData(_i2c_num,
										_address<<1 | WRITE_BIT,
										buf,16,true);
	if(ret != ESP_OK)	ESP_LOGW(TAG,"RTC Init ERROR!\r\n");					
}

void RTC_PCF8563::clearStatus()
{
	uint8_t buf[3] = {0};
	buf[0] = 0x00;	//REG1地址
	buf[1] = 0x00;	//REG1数据
	buf[2] = 0x00;	//REG2数据

	esp_err_t ret = i2c_master_WriteData(_i2c_num,
										_address<<1 | WRITE_BIT,
										buf,3,true);
	if(ret != ESP_OK)	ESP_LOGW(TAG,"Clear Status ERROR!\r\n");

}

void RTC_PCF8563::setTime(uint8_t hour,uint8_t minute,uint8_t sec)
{
	uint8_t buf[4] = {0};
	buf[0] = PCF8563_SEC_ADDR;		//秒寄存器地址
	buf[1] = decToBcd(sec);			//秒
	buf[2] = decToBcd(minute);		//分
	buf[3] = decToBcd(hour);		//时

	esp_err_t ret = i2c_master_WriteData(_i2c_num,
										_address<<1 | WRITE_BIT,
										buf,4,true);
	if(ret != ESP_OK)	ESP_LOGW(TAG,"Set Time ERROR!\r\n");
}

void RTC_PCF8563::setDate(uint8_t day, uint8_t weekday, uint8_t mon, uint8_t century, uint8_t year)
{
	/*  年 = 00 ~ 99,
        月的最高位为世纪位
        世纪位 : 0=20xx, 1=19xx
        */
	month = decToBcd(mon);
	if(century ==1)	{
		month |= PCF8563_CENTURY_MASK;
	}
	else {
		month &= ~PCF8563_CENTURY_MASK;
	}

	uint8_t buf[5] = {0};
	buf[0] = PCF8563_DAY_ADDR;
	buf[1] = decToBcd(day);
	buf[2] = decToBcd(weekday);
	buf[3] = month;
	buf[4] = decToBcd(year);

	esp_err_t ret = i2c_master_WriteData(_i2c_num,
										_address<<1 | WRITE_BIT,
										buf,5,true);
	if(ret != ESP_OK)	ESP_LOGW(TAG,"Set Day ERROR!\r\n");
}

void RTC_PCF8563::enableAlarm()
{

    //设置REG2的AF为0
    status2 &= ~PCF8563_ALARM_AF;
    //使能中断
    status2 |= PCF8563_ALARM_AIE;

	esp_err_t ret = i2c_WriteCommand(_i2c_num,_address,
									PCF8563_STAT2_ADDR,status2,true);
	if(ret != ESP_OK)	ESP_LOGW(TAG,"En AlaeRm ERROR!\r\n");

}

uint8_t RTC_PCF8563::readStatus2()
{
    uint8_t buf[1] = {0};

	esp_err_t ret = i2c_Read_nbyte(_i2c_num,_address,
									PCF8563_STAT2_ADDR,buf,1);
	if(ret != ESP_OK)	ESP_LOGW(TAG,"Read Status2 ERROR!\r\n");

	return buf[0];

}

uint8_t RTC_PCF8563::alarmEnabled()
{
    return RTC_PCF8563::readStatus2() & PCF8563_ALARM_AIE;
}

uint8_t RTC_PCF8563::alarmActive()
{
    return RTC_PCF8563::readStatus2() & PCF8563_ALARM_AF;
}

void RTC_PCF8563::setAlarm(uint8_t min, uint8_t hour, uint8_t day, uint8_t weekday)
{
    if (min <99) {
        min = constrain(min, 0, 59);
        min = decToBcd(min);
        min &= ~PCF8563_ALARM;
    } else {
        min = 0x0; min |= PCF8563_ALARM;
    }

    if (hour <99) {
        hour = constrain(hour, 0, 23);
        hour = decToBcd(hour);
        hour &= ~PCF8563_ALARM;
    } else {
        hour = 0x0; hour |= PCF8563_ALARM;
    }

    if (day <99) {
        day = constrain(day, 1, 31);
        day = decToBcd(day); day &= ~PCF8563_ALARM;
    } else {
        day = 0x0; day |= PCF8563_ALARM;
    }

    if (weekday <99) {
        weekday = constrain(weekday, 0, 6);
        weekday = decToBcd(weekday);
        weekday &= ~PCF8563_ALARM;
    } else {
        weekday = 0x0; weekday |= PCF8563_ALARM;
    }

    RTC_PCF8563::enableAlarm();

    uint8_t buf[5] = {0};
	buf[0] = PCF8563_ALRM_MIN_ADDR;
	buf[1] = min;
	buf[2] = hour;
	buf[3] = day;
	buf[4] = weekday;

	esp_err_t ret = i2c_master_WriteData(_i2c_num,
										_address<<1 | WRITE_BIT,
										buf,5,true);
	if(ret != ESP_OK)	ESP_LOGW(TAG,"Set Alarm ERROR!\r\n");
}

void RTC_PCF8563::setSquareWave(uint8_t frequency)
{
	esp_err_t ret = i2c_WriteCommand(_i2c_num,_address,
					                PCF8563_SQW_ADDR,frequency,true);
    if(ret != ESP_OK)	ESP_LOGW(TAG,"Set Clkout ERROR!\r\n");
}

void RTC_PCF8563::clearSquareWave()
{
    RTC_PCF8563::setSquareWave(SQW_DISABLE);
}

void RTC_PCF8563::resetAlarm()
{
    //set status2 AF val to zero to reset alarm
    status2 &= ~PCF8563_ALARM_AF;
    esp_err_t ret = i2c_WriteCommand(_i2c_num,_address,
					    PCF8563_STAT2_ADDR,status2,true);
    
    if(ret != ESP_OK)	ESP_LOGW(TAG,"Reset Alarm ERROR!\r\n");
}

void RTC_PCF8563::clearAlarm()
{
    //set status2 AF val to zero to reset alarm 
    status2 &= ~PCF8563_ALARM_AF;
    //turn off the interrupt
    status2 &= ~PCF8563_ALARM_AIE;
        
 	esp_err_t ret = i2c_WriteCommand(_i2c_num,_address,
					    PCF8563_STAT2_ADDR,status2,true);
    
    if(ret != ESP_OK)	ESP_LOGW(TAG,"Clear Alarm ERROR!\r\n");
}
